--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -24,7 +24,7 @@
             <form>
               <div class="form-group">
                 <label for="email"><i class="fas fa-envelope"></i> Correo electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                <input type="email" class="form-control" id="email" placeholder="nombre@dominio.com">
               </div>
               <div class="form-group">
                 <label for="password"><i class="fas fa-lock"></i> Contraseña</label>
@@ -35,12 +35,17 @@
               </div>
             </form>
             <div class="text-center mt-3">
-              <a href="#" class="link"><i class="fas fa-question-circle"></i> ¿Olvidaste tu contraseña?</a>
+              <a href="/recuperar-contraseña" class="link"><i class="fas fa-question-circle"></i> ¿Olvidaste tu contraseña?</a>
             </div>
             <div class="text-center mt-3">
               ¿No tienes una cuenta? <a routerLink="/register" class="link"><i class="fas fa-user-plus"></i> Regístrate</a>
             </div>
           </div>
+        </div>
+        <div>
+          <p class="text-center text-muted mt-3">
+          &copy;2024 IRAERO. Todos los derechos reservados.
+          </p>
         </div>
       </div>
     </div>
