--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -1,1 +1,54 @@
-<p>register works!</p>
+<!-- header.component.html -->
+<header class="header">
+  <div class="container-header">
+    <div class="row">
+      <div class="col">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand" href="#">
+            <img src="../../../assets/Logo-Login.png" alt="Logo" class="logo">
+          </a>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header>
+
+<div class="content-wrapper">
+<div class="bg-light d-flex align-items-center justify-content-center vh-100">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title text-center mb-4">Crear una cuenta</h2>
+            <form>
+              <div class="form-group">
+                <label for="name"><i class="fas fa-user"></i> Nombre</label>
+                <input type="text" class="form-control" id="name" placeholder="Nombre">
+              </div>
+              <div class="form-group">
+                <label for="email"><i class="fas fa-envelope"></i> Correo Electrónico</label>
+                <input type="email" class="form-control" id="email" placeholder="nombre@dominio.com">
+              </div>
+              <div class="form-group">
+                <label for="password"><i class="fas fa-lock"></i> Contraseña</label>
+                <input type="password" class="form-control" id="password" placeholder="**********">
+              </div>
+              <div class="form-group">
+                <label for="confirm-password"><i class="fas fa-lock"></i> Confirmar Contraseña</label>
+                <input type="password" class="form-control" id="confirm-password" placeholder="**********">
+              </div>
+              <button type="submit" class="btn btn-primary btn-block">
+                <i class="fas fa-user"></i> Registrarse
+              </button>
+            </form>
+          </div>
+        </div>
+        <p class="text-center text-muted mt-3">
+          &copy;2024 IRAERO. Todos los derechos reservados.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
