--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 
+@import '../node_modules/tailwindcss/base.css';
+@import '../node_modules/tailwindcss/components.css';
+@import '../node_modules/tailwindcss/utilities.css';
+
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import '../node_modules/@fortawesome/fontawesome-free/css/all.css';
 
