--- a/src/app/views/g-user/g-user.component.html
+++ b/src/app/views/g-user/g-user.component.html
@@ -139,6 +139,17 @@
               [(ngModel)]="nuevoUsuario.email"
             />
           </div>
+          <div class="form-group">
+    <label for="password">Contraseña:</label>
+    <input
+      type="password"
+      class="form-control"
+      id="password"
+      name="password"
+      [(ngModel)]="nuevoUsuario.password"
+    />
+</div>
+
         </form>
       </div>
       <!-- Modal Footer -->
