--- a/src/app/views/hospedaje/hospedaje.component.css
+++ b/src/app/views/hospedaje/hospedaje.component.css
@@ -1,3 +1,20 @@
 .container{
 margin-bottom: 50vh;
 }
+
+/* Estilos para los botones de las tarjetas */
+
+.btn-gradient {
+    background: linear-gradient(to right, #66c7ff, #5e6eff);
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .btn-gradient:hover {
+    background: linear-gradient(to left, #66c7ff, #5e6eff);
+  }
