--- a/src/app/views/g-vuelos/g-vuelos.component.html
+++ b/src/app/views/g-vuelos/g-vuelos.component.html
@@ -1,1 +1,42 @@
-<p>g-vuelos works!</p>
+<app-g-header/>
+<div class="container">
+    <h1>Gestión de vuelos</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="Buscar vuelos..." aria-label="Search flights" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <button class="btn btn-primary btn-gradient"><i class="fas fa-plus "></i> Añadir vuelo</button>
+      </div>
+    </div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">N° de vuelo</th>
+          <th scope="col">Partida</th>
+          <th scope="col">Destino</th>
+          <th scope="col">Opciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>FL123</td>
+          <td>New York</td>
+          <td>Los Angeles</td>
+          <td>
+            <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i></button>
+            <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i></button>
+            <button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
