--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -19,6 +19,9 @@
             <a class="nav-link" routerLink="/hospedaje" routerLinkActive="active">Hospedaje</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="/vuelos" routerLinkActive="active">Vuelos</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
           </li>
         </ul>
