--- a/src/app/views/hospedaje/hospedaje.component.css
+++ b/src/app/views/hospedaje/hospedaje.component.css
@@ -1,6 +1,7 @@
 .container{
-margin-bottom: 50vh;
-}
+  margin-bottom: 50vh;
+  text-align: center;
+  }
 
 /* Estilos para los botones de las tarjetas */
 
@@ -13,6 +14,7 @@ margin-bottom: 50vh;
     font-size: 14px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    
   }
   
   .btn-gradient:hover {
