--- a/src/app/views/g-user/g-user.component.html
+++ b/src/app/views/g-user/g-user.component.html
@@ -18,7 +18,7 @@
               </div>
             </div>
             <div >
-              <button type="button" class="btn btn-primary btn-sm" (click)="agregarUsuario()">
+              <button type="button" class="btn btn-primary btn-sm btn-gradient-agregar" (click)="agregarUsuario()">
                 <i class="fas fa-plus"></i> Agregar usuario
               </button>
             </div>
@@ -55,7 +55,7 @@
                   <i class="fas fa-edit"></i>
                 </td>
                 <td>
-                  <button type="button" class="btn btn-danger btn-sm" (click)="eliminarUsuario(usuario)">
+                  <button type="button" class="btn btn-danger btn-sm btn-gradient-eliminar " (click)="eliminarUsuario(usuario)">
                     <i class="fas fa-trash-alt"></i> Eliminar
                   </button>
                 </td>
@@ -76,7 +76,7 @@
     <div class="modal-content">
       <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title">Agregar usuario</h4>
+        <h4 class="modal-title ">Agregar usuario</h4>
         <button
           type="button"
           class="close"
@@ -140,29 +140,28 @@
             />
           </div>
           <div class="form-group">
-    <label for="password">Contraseña:</label>
-    <input
-      type="password"
-      class="form-control"
-      id="password"
-      name="password"
-      [(ngModel)]="nuevoUsuario.password"
-    />
-</div>
-
+            <label for="password">Contraseña:</label>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+              [(ngModel)]="nuevoUsuario.email"
+            />
+          </div>
         </form>
       </div>
       <!-- Modal Footer -->
       <div class="modal-footer">
         <button
           type="button"
-          class="btn btn-secondary"
+          class="btn btn-secondary btn-gradient-cancelar"
           data-dismiss="modal"
           (click)="closeModal()"
         >
           Cerrar
         </button>
-        <button type="button" class="btn btn-primary" (click)="enviarDatos()">
+        <button type="button" class="btn btn-primary btn-gradient-agregar" (click)="enviarDatos()">
           Guardar
         </button>
       </div>
