--- a/src/app/views/gestion-hospedaje/gestion-hospedaje.component.css
+++ b/src/app/views/gestion-hospedaje/gestion-hospedaje.component.css
@@ -16,4 +16,34 @@
     margin-right: 5px;
   }
   
+  .btn-gradient-guardar {
+    background: linear-gradient(to right, #66c7ff, #5e6eff);
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    
+  }
   
+  .btn-gradient-guardar:hover {
+    background: linear-gradient(to left, #66c7ff, #5e6eff);
+  }
+
+  .btn-gradient-cancelar {
+    background: linear-gradient(to right,#b4a7a7, #777271);
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    
+  }
+  
+  .btn-gradient-cancelar:hover {
+    background: linear-gradient(to left, #b4a7a7, #777271);
+  }
