--- a/src/app/views/gestion-hospedaje/gestion-hospedaje.component.html
+++ b/src/app/views/gestion-hospedaje/gestion-hospedaje.component.html
@@ -16,10 +16,10 @@
         <label for="precio" class="form-label">Precio</label>
         <input type="number" id="precio" class="form-control" [(ngModel)]="currentHospedaje.precio" name="precio" required>
       </div>
-      <button type="submit" class="btn btn-primary">
+      <button type="submit" class="btn btn-primary btn-gradient-guardar">
         <i class="fas fa-save"></i> Guardar
       </button>
-      <button type="button" class="btn btn-secondary" (click)="resetForm()">
+      <button type="button" class="btn btn-secondary btn-gradient-cancelar" (click)="resetForm()">
         <i class="fas fa-undo"></i> Cancelar
       </button>
     </form>
