--- a/src/app/views/g-user/g-user.component.html
+++ b/src/app/views/g-user/g-user.component.html
@@ -1,4 +1,4 @@
-<app-g-header></app-g-header>
+<app-g-header/>
 <div class="container mt-5">
   <div class="row">
     <div class="col-12">
@@ -9,15 +9,15 @@
     <div class="col-12">
       <div class="card">
         <div class="card-header bg-creame text-black">
-          <div class="d-flex justify-content-between align-items-center ">
-            <h5 >Lista de usuarios</h5>
+          <div class="d-flex justify-content-between align-items-center">
+            <h5>Lista de usuarios activos</h5>
             <div class="custom-input-group">
-              <input type="text" class="form-control" placeholder="Buscar por ID o nombre" [(ngModel)]="filtro">
+              <input type="text" class="form-control" placeholder="Buscar por nombre o email" [(ngModel)]="filtro">
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="button" (click)="limpiarFiltro()">Limpiar</button>
               </div>
             </div>
-            <div >
+            <div>
               <button type="button" class="btn btn-primary btn-sm btn-gradient-agregar" (click)="agregarUsuario()">
                 <i class="fas fa-plus"></i> Agregar usuario
               </button>
@@ -33,33 +33,29 @@
                 <th>Dirección</th>
                 <th>Teléfono</th>
                 <th>Email</th>
-                <th>Estado</th>
+                <th>Acciones</th> <!-- Encabezado para acciones -->
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let usuario of filtrarUsuarios()">
-                <td>{{ usuario.id }}</td>
-                <td>{{ usuario.nombre }}</td>
-                <td>{{ usuario.direccion }}</td>
-                <td>{{ usuario.telefono }}</td>
-                <td>{{ usuario.email }}</td>
-                <td>
-                  <span *ngIf="usuario.estado" class="text-success">
-                    <i class="fas fa-check-circle"></i> Activo
-                  </span>
-                  <span *ngIf="!usuario.estado" class="text-danger">
-                    <i class="fas fa-times-circle"></i> Inactivo
-                  </span>
-                </td>
-                <td>
-                  <i class="fas fa-edit"></i>
-                </td>
-                <td>
-                  <button type="button" class="btn btn-danger btn-sm btn-gradient-eliminar " (click)="eliminarUsuario(usuario)">
-                    <i class="fas fa-trash-alt"></i> Eliminar
-                  </button>
-                </td>
-              </tr>
+              <ng-container *ngIf="usuarios.length > 0; else noUsuarios">
+                <tr *ngFor="let usuario of filtrarUsuarios()">
+                  <td>{{ usuario.id }}</td>
+                  <td>{{ usuario.nombre }}</td>
+                  <td>{{ usuario.direccion }}</td>
+                  <td>{{ usuario.telefono }}</td>
+                  <td>{{ usuario.email }}</td>
+                  <td>
+                    <button type="button" class="btn btn-danger btn-sm btn-gradient-eliminar" (click)="deleteUser(usuario.id)">
+                      <i class="fas fa-trash-alt"></i> Eliminar
+                    </button>
+                  </td>
+                </tr>
+              </ng-container>
+              <ng-template #noUsuarios>
+                <tr>
+                  <td colspan="6" class="text-center">No se encontraron usuarios activos</td>
+                </tr>
+              </ng-template>
             </tbody>
           </table>
         </div>
@@ -68,21 +64,14 @@
   </div>
 </div>
 
-
-
 <!-- Modal -->
 <div class="modal" #myModal>
   <div class="modal-dialog">
     <div class="modal-content">
       <!-- Modal Header -->
       <div class="modal-header">
-        <h4 class="modal-title ">Agregar usuario</h4>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          (click)="closeModal()"
-        >
+        <h4 class="modal-title">Agregar usuario</h4>
+        <button type="button" class="close" data-dismiss="modal" (click)="closeModal()">
           &times;
         </button>
       </div>
@@ -91,79 +80,34 @@
         <form>
           <div class="form-group">
             <label for="dni">DNI:</label>
-            <input
-              type="text"
-              class="form-control"
-              id="dni"
-              name="dni"
-              [(ngModel)]="nuevoUsuario.id"
-            />
+            <input type="text" class="form-control" id="dni" name="dni" [(ngModel)]="nuevoUsuario.id" required>
           </div>
           <div class="form-group">
             <label for="nombre">Nombre:</label>
-            <input
-              type="text"
-              class="form-control"
-              id="nombre"
-              name="nombre"
-              [(ngModel)]="nuevoUsuario.nombre"
-            />
+            <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="nuevoUsuario.nombre" required>
           </div>
           <div class="form-group">
             <label for="direccion">Dirección:</label>
-            <input
-              type="text"
-              class="form-control"
-              id="direccion"
-              name="direccion"
-              [(ngModel)]="nuevoUsuario.direccion"
-            />
+            <input type="text" class="form-control" id="direccion" name="direccion" [(ngModel)]="nuevoUsuario.direccion">
           </div>
           <div class="form-group">
             <label for="telefono">Teléfono:</label>
-            <input
-              type="text"
-              class="form-control"
-              id="telefono"
-              name="telefono"
-              [(ngModel)]="nuevoUsuario.telefono"
-            />
+            <input type="text" class="form-control" id="telefono" name="telefono" [(ngModel)]="nuevoUsuario.telefono">
           </div>
           <div class="form-group">
             <label for="email">Email:</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              name="email"
-              [(ngModel)]="nuevoUsuario.email"
-            />
+            <input type="email" class="form-control" id="email" name="email" [(ngModel)]="nuevoUsuario.email" required>
           </div>
           <div class="form-group">
             <label for="password">Contraseña:</label>
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              name="password"
-              [(ngModel)]="nuevoUsuario.email"
-            />
+            <input type="password" class="form-control" id="password" name="password" [(ngModel)]="nuevoUsuario.password" required>
           </div>
         </form>
       </div>
       <!-- Modal Footer -->
       <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-secondary btn-gradient-cancelar"
-          data-dismiss="modal"
-          (click)="closeModal()"
-        >
-          Cerrar
-        </button>
-        <button type="button" class="btn btn-primary btn-gradient-agregar" (click)="enviarDatos()">
-          Guardar
-        </button>
+        <button type="button" class="btn btn-secondary btn-gradient-cancelar" data-dismiss="modal" (click)="closeModal()">Cerrar</button>
+        <button type="button" class="btn btn-primary btn-gradient-agregar" (click)="createUser()">Guardar</button>
       </div>
     </div>
   </div>
