--- a/src/app/views/vuelos/vuelos.component.html
+++ b/src/app/views/vuelos/vuelos.component.html
@@ -4,12 +4,15 @@
     <div class="container mt-4">
         <h1>Lista de Vuelos</h1>
         <div class="row">
-            <div class="col-md-4 mb-4" *ngFor="let vuelo of vuelos">
+            <div class="col-md-4 mb-4" *ngFor="let vuelos of vuelo">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">{{ vuelo.origen }} - {{ vuelo.destino }}</h5>
-                        <p class="card-text">Fecha: {{ vuelo.fecha }}</p>
-                        <p class="card-text">Precio: {{ vuelo.precio }}</p>
+                        <h5 class="card-title">{{ vuelos.aeropuertoOrigenId }} - {{ vuelos.aeropuertoLlegadaId }}</h5>
+                        <p class="card-text">Fecha: {{ vuelos.fechaSalida }}</p>
+                        <p class="card-text">Precio: {{ vuelos.precio }}</p>
+
+                        
+
                         <button class="btn btn-primary btn-gradient">Reservar <i class="fas fa-ticket-alt"></i></button>
                     </div>
                 </div>
