--- a/src/app/views/g-vuelos/g-vuelos.component.html
+++ b/src/app/views/g-vuelos/g-vuelos.component.html
@@ -40,7 +40,7 @@
               <td>{{vuelos.fechaSalida}}</td>
               <td>{{vuelos.horaSalida}}</td>
               <td>{{vuelos.horaLlegada}}</td>
-              <td>{{vuelos.duracion}}</td>
+              <td>{{vuelos.duracion}} min</td>
               <td>{{vuelos.asientosDisponibles}}</td>
               <td>{{vuelos.estado}}</td>
               <td>S/. {{vuelos.precio}}</td>
