--- a/src/app/views/habitaciones/habitaciones.component.css
+++ b/src/app/views/habitaciones/habitaciones.component.css
@@ -1,18 +1,30 @@
 /* habitaciones.component.css */
-.nav-tabs .nav-item {
-    margin-bottom: 0;
-  }
-  
-  .nav-tabs .nav-link {
-    color: #333; /* Color del texto de las pestañas */
-    background-color: #f8f9fa; /* Color de fondo de las pestañas */
-    border: 1px solid #dee2e6; /* Borde de las pestañas */
-    border-radius: 0.25rem 0.25rem 0 0; /* Bordes redondeados en la parte superior */
-  }
-  
-  .nav-tabs .nav-link.active {
-    color: #007bff; /* Color del texto de la pestaña activa */
-    background-color: #fff; /* Color de fondo de la pestaña activa */
-    border-color: #dee2e6 #dee2e6 #fff; /* Bordes de la pestaña activa */
-  }
-  
+.container {
+  margin-bottom: 50vh;
+  text-align: center;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.card-img-top {
+  height: 200px; /* Altura fija para las imágenes */
+  object-fit: cover; /* Ajuste para cubrir el contenedor */
+}
+
+.btn-gradient-reservar {
+  background: linear-gradient(to right, #66c7ff, #5e6eff);
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-gradient-reservar:hover {
+  background: linear-gradient(to left, #66c7ff, #5e6eff);
+}
