--- a/src/app/views/hospedaje/hospedaje.component.css
+++ b/src/app/views/hospedaje/hospedaje.component.css
@@ -1,22 +1,24 @@
-.container{
+.container {
   margin-bottom: 50vh;
   text-align: center;
-  }
+}
 
-/* Estilos para los botones de las tarjetas */
+.card-img-top {
+  height: 200px; /* Altura fija para las imágenes */
+  object-fit: cover; /* Ajuste para cubrir el contenedor */
+}
 
 .btn-gradient {
-    background: linear-gradient(to right, #66c7ff, #5e6eff);
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-transform: uppercase;
-    font-size: 14px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    
-  }
-  
-  .btn-gradient:hover {
-    background: linear-gradient(to left, #66c7ff, #5e6eff);
-  }
+  background: linear-gradient(to right, #66c7ff, #5e6eff);
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-gradient:hover {
+  background: linear-gradient(to left, #66c7ff, #5e6eff);
+}
