--- a/src/app/views/hospedaje/hospedaje.component.html
+++ b/src/app/views/hospedaje/hospedaje.component.html
@@ -2,14 +2,14 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-4" *ngFor="let hotel of hoteles">
-      <div class="card mb-3">
+    <div class="col-md-4 d-flex" *ngFor="let hotel of hoteles">
+      <div class="card mb-4 shadow-sm flex-fill">
         <img [src]="hotel.imagen" class="card-img-top" alt="Hotel Image">
-        <div class="card-body">
+        <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ hotel.nombre }}</h5>
           <p class="card-text"><i class="fas fa-map-marker-alt"></i> {{ hotel.direccion }}</p>
           <p class="card-text"><i class="fas fa-hotel"></i> Categoria: {{ hotel.categoria }}</p>
-          <div>
+          <div class="mt-auto">
             <a [routerLink]="['/habitaciones', hotel.id]" class="btn btn-primary btn-gradient">Ver Habitaciones</a>
           </div>
         </div>
