--- a/src/app/views/vuelos/vuelos.component.html
+++ b/src/app/views/vuelos/vuelos.component.html
@@ -1,24 +1,65 @@
 <app-header></app-header>
 
 <div class="content">
-    <div class="container mt-4">
-        <h1>Lista de Vuelos</h1>
-        <div class="row">
-            <div class="col-md-4 mb-4" *ngFor="let vuelos of vuelo">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ vuelos.aeropuertoOrigenId }} - {{ vuelos.aeropuertoLlegadaId }}</h5>
-                        <p class="card-text">Fecha: {{ vuelos.fechaSalida }}</p>
-                        <p class="card-text">Precio: {{ vuelos.precio }}</p>
+  <div class="container mt-4">
 
-                        
+    <!-- Barra de navegación por días -->
+    <div class="navigation-bar mb-4 d-flex align-items-center">
+      <button 
+        type="button" 
+        class="btn btn-gradient btn-secondary me-2"
+        (click)="previousWeek()"
+        [disabled]="isPreviousWeekDisabled">
+        &#8249; <!-- Left arrow -->
+      </button>
+      
+      <div class="btn-group flex-grow-1 d-flex justify-content-center" role="group" aria-label="Navigation Days">
+        <button 
+          type="button" 
+          class="btn btn-gradient btn-secondary"
+          *ngFor="let day of daysOfWeek"
+          (click)="onDateSelected(day.date)">
+          {{ day.dayName }}, {{ day.date.toLocaleDateString() }}
+        </button>
+      </div>
 
-                        <button class="btn btn-primary btn-gradient">Reservar <i class="fas fa-ticket-alt"></i></button>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <button 
+        type="button" 
+        class="btn btn-gradient btn-secondary ms-2"
+        (click)="nextWeek()">
+        &#8250; <!-- Right arrow -->
+      </button>
     </div>
+
+    <div class="vuelos-list">
+      <div class="card mb-4" *ngFor="let vuelo of filteredVuelos">
+        <div class="card-body" (click)="navigateToBoletos(vuelo.id)"> <!-- Agregamos el evento click -->
+          <h5 class="card-title">{{ vuelo.aeropuertoOrigenId }} - {{ vuelo.aeropuertoLlegadaId }}</h5>
+          <div class="line-divider"></div>
+          <div class="row align-items-center">
+            <div class="col-4">
+              <p class="card-text hora-salida">Hora de salida: {{ vuelo.horaSalida }}</p>
+            </div>
+            <div class="col-4">
+              <p class="card-text duracion">Duración: {{ vuelo.duracion }} min</p>
+            </div>
+            <div class="col-4 text-end">
+              <p class="card-text hora-llegada">Hora de llegada: {{ vuelo.horaLlegada }}</p>
+            </div>
+          </div>
+          
+          <div class="row mt-2">
+            <div class="col-8">
+              <!-- Espacio adicional entre la información y el precio -->
+            </div>
+            <div class="col-4 text-end">
+              <p class="card-text precio">Desde {{ vuelo.precio }} PEN (S/.)</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <app-footer></app-footer>
