--- a/src/app/views/g-vuelos/g-vuelos.component.html
+++ b/src/app/views/g-vuelos/g-vuelos.component.html
@@ -46,9 +46,9 @@
               <td>S/. {{vuelos.precio}}</td>
 
               <td>
-                <button class="btn btn-sm btn-info">
+                <a [routerLink]="['/g-boletos', vuelos.id]" class="btn btn-sm btn-info" target="_blank">
                   <i class="fas fa-eye"></i>
-                </button>
+                </a>
                 <button class="btn btn-sm btn-warning">
                   <i class="fas fa-edit"></i>
                 </button>
@@ -56,7 +56,6 @@
                   <i class="fas fa-trash"></i>
                 </button>
               </td>
-              
 
             </tr>
           </ng-container>
